--- a/index.html
+++ b/index.html
@@ -16,12 +16,59 @@
                 <img class="profile__avatar" src="./images/profile-avatar.jpg" alt="Аватар">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"></button>
+                    <button class="profile__edit-button hovered"></button>
                     <p class="profile__name-subline">Исследователь океана</p>
                 </div>
-                <button class="profile__button"></button>
+                <button class="profile__button hovered"></button>
+            </section>
+            <section class="elements">
+                <div class="element">  
+                    <img class="element__image" src="./images/element-moscow.jpg" alt="Москва">
+                    <div class="element__caption">    
+                        <h2 class="element__title">Москва</h2>
+                        <button class="element__like-button hovered"></button>
+                    </div>
+                </div>
+                <div class="element">
+                    <img class="element__image" src="./images/element-smolensk.jpg" alt="Смоленск">
+                    <div class="element__caption">
+                        <h2 class="element__title">Смоленск</h2>
+                        <button class="element__like-button hovered"></button>
+                    </div>
+                </div>
+                <div class="element">
+                    <img class="element__image" src="./images/element-kamchatka.jpg" alt="Камчатка">
+                    <div class="element__caption">
+                        <h2 class="element__title">Камчатка</h2>
+                        <button class="element__like-button hovered"></button>
+                    </div>
+                </div>
+                <div class="element">
+                    <img class="element__image" src="./images/element-elbrus.jpg" alt="Гора Эльбрус">
+                    <div class="element__caption">
+                        <h2 class="element__title">Гора Эльбрус</h2>
+                        <button class="element__like-button hovered"></button>
+                    </div>
+                </div>
+                <div class="element">
+                    <img class="element__image" src="./images/element-dombay.jpg" alt="Домбай">
+                    <div class="element__caption">
+                        <h2 class="element__title">Домбай</h2>
+                        <button class="element__like-button hovered"></button>
+                    </div>
+                </div>
+                <div class="element">
+                    <img class="element__image" src="./images/element-karachaevsk.jpg" alt="Карачаевск">
+                    <div class="element__caption">
+                        <h2 class="element__title">Карачаево-Черкесия</h2>
+                        <button class="element__like-button hovered"></button>
+                    </div>
+                </div>
             </section>
         </main>
+        <footer class="footer">
+            <span class="footer__copyright">&copy; 2020 Mesto Russia</span>     
+        </footer>
     </div>
 </body>
 </html>
