--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Mesto</title>
 </head>
 <body class="body">
+    <div class="edit-form hidden">
+        <div class="edit-form__window">
+            <button class="edit-form__close-button hovered"></button>
+            <h2 class="edit-form__title">Редактировать профиль</h2>
+            <input class="edit-form__field-name" id="edit-form__field-name" type="text">
+            <input class="edit-form__field-subline" id="edit-form__field-subline" type="text">
+            <button class="edit-form__button">Сохранить</button>
+        </div>
+    </div>
     <div class="page">
         <header class="header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Место">
@@ -15,8 +24,10 @@
             <section class="profile">
                 <img class="profile__avatar" src="./images/profile-avatar.jpg" alt="Аватар">
                 <div class="profile__info">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button hovered"></button>
+                    <div>
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <button class="profile__edit-button hovered"></button>
+                    </div>
                     <p class="profile__name-subline">Исследователь океана</p>
                 </div>
                 <button class="profile__button hovered"></button>
@@ -70,5 +81,6 @@
             <span class="footer__copyright">&copy; 2020 Mesto Russia</span>     
         </footer>
     </div>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
