--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </template> 
 
     <script src="./scripts/initial-cards.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/validate.js"></script> -->
     <!-- <script src="./scripts/script.js"></script> -->
 </body>
 </html>
